# espeak-ng

./: meson.build
src/: meson.build
src/libespeak-ng/: meson.build
src/speechPlayer/: meson.build
src/ucd-tools/: meson.build
tests/: meson.build
